fix overlapping-elements display bug on memberships, and refactored membership of orgs display out to separate file

--- a/app/assets/stylesheets/app-elements/tables.scss
+++ b/app/assets/stylesheets/app-elements/tables.scss
@@ -58,3 +58,8 @@ td dd {
     width: 40%;
   }
 }
+
+td.memberships-list {
+  h4{ font-weight: bold; }
+  p { margin-bottom: 0; margin-left: 1em; }
+}
